--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,3 +11,13 @@ services:
       - 5432:5432
     volumes:
       - ./postgresql/init.sql:/docker-entrypoint-initdb.d/init.sql
+
+  emp-manager:
+    image: emp-manager:latest
+    container_name: emp-manager
+    environment:
+        SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/employeemanager
+        SPRING_DATASOURCE_USERNAME: user
+        SPRING_DATASOURCE_PASSWORD: password
+    ports:
+        - 8080:8080
