--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,9 +15,12 @@ services:
   emp-manager:
     image: emp-manager:latest
     container_name: emp-manager
+    restart: always
     environment:
         SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/employeemanager
         SPRING_DATASOURCE_USERNAME: user
         SPRING_DATASOURCE_PASSWORD: password
     ports:
         - 8080:8080
+    depends_on:
+        - db
